/***********************************************************************
X3 ChangeLog

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/tools.c: Extended account ban support.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Basic extended ban support.

	* src/tools.c: Basic extended ban support.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed up SF bug #2799155.

	* src/modcmd.c: Fixed up an issue where missing args was coming up
	when it shouldnt.

2009-05-31  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* GPL 3 and svn propset updates.

2009-05-31  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/main.c: Added spamserv.h #include.

	* src/main-common.c: Woops forgot to init spamserv.

	* src/spamserv.c: Fixed up AddLocalUser.

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Small fix with CSMSG_SET_UNREVIEWED.

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/hash.c: Couple of tweaks.

	* src/proto-common.c: Fix for triggers not working with forwards as well as
	off channel services.

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed a crash with setting a .set option with an invalid
	option.

	* src/mail-smtp.c: Added missing file.

2009-05-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Major update to bring X3 in line with the latest SRVX commit.  Please see
	UPGRADE. Credits go to the SRVX team.

2009-04-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Ignore stats headers.

2009-05-08  Henrik Stuart  <evilnet@hstuart.dk>

	* src/mod-python.c: generalised cmd_run to process file_input productions.

2009-05-06  Henrik Stuart  <evilnet@hstuart.dk>

	* src/mod-python.c: generalised PYTHONPATH environment setting to
	not explicitly set Alex's home directory.

2009-05-05  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto-p10.c: introduced irc_sno for SNO messages. Removed broken